--- a/src/app/add-klijent/add-klijent.component.html
+++ b/src/app/add-klijent/add-klijent.component.html
@@ -46,7 +46,7 @@
               </div>
             </div>
             <div class="form-group">
-                <label for="datumRodjenja">Datum Isteka</label>
+                <label for="datumRodjenja">Datum Rodjenja</label>
                 <input type="date" id="datumRodjenja" formControlName="datumRodjenja" class="form-control" />
                 <div *ngIf="receptForm.get('datumRodjenja')?.invalid && receptForm.get('datumRodjenja')?.touched" class="error">
                   Datum Isteka is required.
